# small-reasoning-model

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  small-model-expert-path-2026.html  small-reasoning-model-chat.md  small-reasoning-model-spec.md
configs/: model_1b.yaml  model_3b.yaml  model_500m.yaml
data/: grpo_dataset.py  preprocess.py  sft_format.py  tokenize_dataset.py
data/sft/: si_examples.jsonl
docs/: SYSTEM_ARCHITECTURE.md  architecture.md  baseline-comparison.md  contributing.md  evaluation.md  hardware.md  mig-guidance.md  training.md
docs/blog/: 01-motivation.md  02-architecture.md  03-hardware.md  04-tokenizer.md  05-data-pipeline.md  06-debugging.md  07-sft.md  08-grpo.md  09-inference.md  10-context-length.md  11-structured-intent.md  12-self-improving-system.md  13-kv-cache-compression.md  14-generation-debugging.md  15-grpo-eval.md  16-mig-partitioning.md  17-baseline-comparison.md  README.md
eval/: baseline_eval.py  benchmark.py  harness.py  math_eval.py  shape_check.py  si_eval.py  si_rewards.py  si_test_cases.jsonl
inference/: convert_gguf.py  serve.py
model/: __init__.py  architecture.py  attention.py  ffn.py  kv_compress.py  nki_attention.py
scripts/: wait_and_pretrain.sh  wait_and_tokenize.sh
tokenizer/: train_tokenizer.py
training/: grpo.py  pretrain.py  rewards.py  sft.py
