[project]
name = "small-reasoning-model"
version = "0.1.0"
description = "Small reasoning model designed at target size — not quantized down from larger"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Scott Friedman" }]
keywords = ["machine-learning", "language-model", "reasoning", "grpo", "trainium"]
requires-python = ">=3.11"
dependencies = [
    # Core ML
    "torch>=2.3",
    "numpy>=1.26",

    # Tokenizer
    "tokenizers>=0.19",

    # Data loading
    "datasets>=2.20",
    "transformers>=4.41",

    # Math verification (GRPO rewards)
    "sympy>=1.12",

    # Utilities
    "tqdm>=4.66",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
eval = [
    "lm-eval>=0.4",
]
neuron = [
    # Install separately on Trn2 instances via Neuron SDK
    # pip install torch-neuronx neuronx-cc --extra-index-url https://pip.repos.neuron.amazonaws.com
]
serve = [
    "fastapi>=0.111",
    "uvicorn>=0.29",
]

[project.scripts]
srm-pretrain   = "training.pretrain:main"
srm-sft        = "training.sft:main"
srm-grpo       = "training.grpo:main"
srm-tokenizer  = "tokenizer.train_tokenizer:main"
srm-shape      = "eval.shape_check:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["model", "tokenizer", "data", "training", "eval", "inference"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
    "black>=24.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]
